Added consultation form, easy-admin and security.

--- a/templates/consultation/confirmation.html.twig
+++ b/templates/consultation/confirmation.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Adauga o consultatie!{% endblock %}
+{% block title %}Consultatie confirmata!{% endblock %}
 
 {% block body %}
 <style>
@@ -9,10 +9,6 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Adauga o consultatie! ✅</h1>
-</div>
-
-<div class="example-wrapper">
-    {{ form(form, {attr: {'novalidate': 'novalidate'}}) }}
+    <h1>Consultatie confirmata! ✅</h1>
 </div>
 {% endblock %}
