--- a/templates/static_pages/homepage.html.twig
+++ b/templates/static_pages/homepage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StaticPagesController!{% endblock %}
+{% block title %}Pagina de start{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,6 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/alex/web/doctor-presentation/src/Controller/StaticPagesController.php'|file_link(0) }}">src/Controller/StaticPagesController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/alex/web/doctor-presentation/templates/static_pages/index.html.twig'|file_link(0) }}">templates/static_pages/index.html.twig</a></code></li>
-    </ul>
+    <h1>Pagina de start ✅</h1>
 </div>
 {% endblock %}
