--- a/templates/consultation/index.html.twig
+++ b/templates/consultation/index.html.twig
@@ -3,16 +3,64 @@
 {% block title %}Adauga o consultatie!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Adauga o consultatie! ✅</h1>
-</div>
-
-<div class="example-wrapper">
-    {{ form(form, {attr: {'novalidate': 'novalidate'}}) }}
-</div>
+    <div class="row">
+        <div class="section-title">Programeaza o consultatie online</div>
+    </div>
+    <div class="">
+        <div class="form">
+            {{ form_start(form, {attr: {'novalidate': 'novalidate'}}) }}
+                <div class="form-group row">
+                    <label for="name" class="col-sm-2 col-form-label">Nume</label>
+                    <div class="col-sm-10">
+                        {{ form_widget(form.name, { 'attr': { 'class': 'form-control' } }) }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="email" class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-10">
+                        {{ form_widget(form.email, { 'attr': { 'class': 'form-control' } }) }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="email" class="col-sm-2 col-form-label">Telefon</label>
+                    <div class="col-sm-10">
+                        {{ form_widget(form.phone, { 'attr': { 'class': 'form-control' } }) }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="email" class="col-sm-2 col-form-label">Mesaj</label>
+                    <div class="col-sm-10">
+                        {{ form_widget(form.message, { 'attr': { 'class': 'form-control' } }) }}
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-10">
+                        <div class="form-check">
+                            {{ form_widget(form.acceptGdpr, { 'attr': { 'class': 'form-check-input' } }) }}
+                            <label class="form-check-label" for="gdpr">
+                                GDPR
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-2"></div>
+                    <div class="col-sm-10">
+                        <div class="form-check">
+                            {{ form_widget(form.acceptTerms, { 'attr': { 'class': 'form-check-input' } }) }}
+                            <label class="form-check-label" for="terms">
+                                Terms
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        {{ form_row(form.submit, { 'attr': { 'class': 'btn btn-primary' } }) }}
+                    </div>
+                </div>
+            {{ form_end(form) }}
+        </div>
+    </div>
 {% endblock %}
