--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,15 +17,10 @@
                 </div>
                 <div class="menu col-sm-10 row">
                     <div class="col-md-3"></div>
-                    <div class="col-md-3"><a href="{{ path('app_consultation') }}">Consultatie on-line</a></div>
+                    <div class="col-md-3"><a href="{{ path('app_consultation') }}">Consultanță on-line</a></div>
                     <div class="col-md-2"><a href="{{ path('app_homepage') }}#doctor">Doctor</a></div>
                     <div class="col-md-2"><a href="{{ path('app_homepage') }}#prices">Tarife</a></div>
                     <div class="col-md-2"><a href="{{ path('app_homepage') }}#gallery">Galerie</a></div>
-                    <!-- <ul>
-                        <li><a href="#">Consultanta on-line</a></li>
-                        <li><a href="#">Cabinet</a></li>
-                        <li><a href="#">Doctor</a></li>
-                    </ul> -->
                 </div>
             </div>
 
@@ -35,10 +30,24 @@
                 <div class="col-md-4">
                 </div>
                 <div class="col-md-4">
-                    Informatii utile
+                    <div class="footer-title">
+                        Informații utile
+                    </div>
+                    <div class="footer-content">
+                        <ul>
+                            <li><a href="{{ path('app_consultation') }}">Consultanță on-line</a></li>
+                            <li><a href="{{ path('app_terms') }}">Termeni și condiții pentru consultanță on-line</a></li>
+                            <li><a href="{{ path('app_gdpr') }}">Consimțământ de prelucrare a datelor cu caracter personal</a></li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    Unde ne gasiti
+                    <div class="footer-title">
+                        Unde ne găsiți
+                    </div>
+                    <div class="footer-content">
+                        Florești, Str. Eroilor, nr. 168, Ap. 1
+                    </div>
                 </div>
             </div>
             <div class="footer-credits row">
