--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,8 +1,3 @@
-.page {
-    min-height: 1000px;
-}
-
-
 .footer-credits {
     background-color: cadetblue;
     padding: 20px 30px;
@@ -185,6 +180,12 @@
 #carousel-testimonials {
     width: 100%;
     padding: 30px 15% 30px 15%;
+}
+
+.form-login {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 50px;
 }
 
 /* Util */
