--- a/templates/consultation/index.html.twig
+++ b/templates/consultation/index.html.twig
@@ -84,7 +84,7 @@
             {{ form_end(form) }}
         </div>
         <div class="col-lg-3 consultation-about">
-            Scopul serviciului de CONSULTANȚĂ ONLINE este să protejăm în această perioadă persoanele vulnerabile (vârstnici, copii) 
+            Scopul serviciului de CONSULTANȚĂ ONLINE este să protejăm în această perioadă toate persoanele 
             și să oferim un ajutor celor aflați în imposibilitatea de a se deplasa la cabinetul medical 
             (persoane aflate în carantină/autoizolare etc). CONSULTANȚA ONLINE nu este echivalentul consultației medicale 
             efectuată de către un medic în cabinet, nu se adresează urgențelor majore și are limitele ei evidente. 
