--- a/templates/static_pages/gdpr.html.twig
+++ b/templates/static_pages/gdpr.html.twig
@@ -6,4 +6,58 @@
     <div class="row">
         <div class="section-title">Consimțământ de prelucrare a datelor cu caracter personal</div>
     </div>
+    <div class="row terms-text">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+        
+Protecția datelor cu caracter personal
+<br>Începând cu data de 25 mai 2018, se aplica Regulamentul (UE) 2016/679 privind protecția persoanelor fizice în ceea ce privește prelucrarea datelor cu caracter personal și privind libera circulație a acestor date și de abrogare a Directivei 95/46/CE (Regulamentul general privind protecția datelor) denumit în continuare „Regulamentul GDPR”.
+<br>I. Definiții:
+<br>● Operator = Operatorul responsabil pentru prelucrarea datelor în sensul Regulamentului GDPR este PAEDIATRICS BEST PRACTICE SRL, este persoană juridică, cu sediul social în Florești, str. Porii, nr. 154, ap. 22, jud. CLUJ, înmatriculată la O.R.C. sub nr. J12/1806/2017, CUI 37437978, Tel: 0757 995 567, E-mail: pedi.floresti@yahoo.com.
+<br>● Persoana vizată = persoana fizică identificată sau identificabilă (care poate fi identificată, direct sau indirect, în special prin referire la un element de identificare: nume, număr de identificare, date de localizare, un identificator online, sau la unul/mai multe elemente specifice, proprii identității sale fizice, fiziologice, genetice, psihice, economice, culturale sau sociale). Persoana vizată poate fi solicitantul unui serviciu oferit de către Operator, precum și orice altă persoană fizică ale cărei date cu caracter personal sunt transmise către Operator (cu titlu exemplificativ un client sau potențial client, un candidat pentru un anumit post disponibil, un utilizator al site-ului Operatorului etc.).
+<br>● Categorii de date prelucrate = Datele cu caracter personal (prenumele, numele, data nașterii, adresa, nr. de telefon și adresa de e-mail etc.) sunt prelucrate de către noi doar în situația în care introduceți aceste date într-o rubrică de pe site sau ni le transmiteți prin e-mail.
+<br>● Prelucrarea datelor personale înseamnă orice operațiune sau set de operațiuni efectuate asupra datelor cu caracter personal sau asupra seturilor de date cu caracter personal, cu sau fără utilizarea de mijloace automate, cum ar fi colectarea, înregistrarea, organizarea, structurarea, stocarea, adaptarea sau modificarea, extragerea, consultarea, utilizarea, divulgarea prin transmitere, diseminarea sau punerea la dispoziție în orice alt mod, alinierea sau combinarea, restricționarea, ștergerea sau distrugerea.
+<br>II. Scopul prelucrării datelor cu caracter personal:
+<br>a. Accesarea site-ului:
+<br>La fiecare accesare de către un utilizator a unei pagini din oferta noastră și la fiecare deschidere a unui fișier, datele de acces sunt salvate de către noi și parțial de către terți sub forma unor fișiere de tip protocol. Fiecare set de date cuprinde: pagina de internet de pe care accesați pagina noastră, adresa IP, data și ora accesului, solicitarea clientului, codul de răspuns http, cantitatea de date transferata, informații despre programul de navigare și sistemul de operare folosit de dumneavoastra.
+<br>b. Localizarea geografica:
+<br>Prin intermediul localizării geografice, cu ajutorul adresei IP, este posibila din punct de vedere tehnic estimarea poziției geografice a utilizatorului de internet.
+Anumite date de trafic (cum sunt adresele IP sau alți identificatori ai dispozitivelor cu care ne accesații site-ul) pot fi în anumite circumstanțe date cu caracter personal și pe care le vom trata ca atare.
+<br>III. Temeiul juridic
+<br>Reprezintă interesul legitim al Operatorului de a evita fraudele online și de a asigura funcționalitatea generala a site-ului, executarea unui contract și consimțământul persoanei vizate, după caz.
+<br>IV. Drepturile persoanei vizate cu privire la prelucrarea datelor cu caracter personal
+<br>a. Dreptul la informare și acces la date cu caracter personal: dreptul de a obține o confirmare a faptului că se prelucrează sau nu date cu caracter personal care vă privesc si, în caz afirmativ, acces la datele respective.
+<br>b. Dreptul la rectificare: dreptul de a solicita Operatorului și de a obține, fără întârzieri nejustificate, rectificarea datelor cu caracter personal inexacte care vă privesc și/sau de a obține completarea datelor cu caracter personal care sunt incomplete, cu mențiunea că în cazul unui cont online aceste modificări le puteți efectua personal din secțiunea de editare a datelor contului.
+<br>c. Dreptul la ștergerea datelor („dreptul de a fi uitat”): dreptul de a obține ștergerea datelor cu caracter personal care vă privesc, fără întârzieri nejustificate, în cazul în care se aplica anumite motive menționate în Regulamentul GDPR.
+<br>d. Dreptul la restricționarea prelucrării : dreptul de a obține restricționarea prelucrării în anumite cazuri.
+<br>e. Dreptul la portabilitatea datelor: dreptul de a primi datele cu caracter personal care vă privesc și de a le transmite către un alt operator.
+<br>f. Dreptul la opoziție: dreptul de a vă opune în orice moment prelucrării datelor cu caracter personal care vă privesc, în condițiile Regulamentului GDPR.
+<br>g . Dreptul de a nu face obiectul unei decizii bazate exclusiv pe prelucrarea automată, inclusiv crearea de profiluri, care produce efecte juridice care vă privesc sau vă afectează în mod similar într o măsura semnificativă.
+<br>h. Dreptul să vă adresați printr-o plângere Autorității Naționale de Supraveghere a Prelucrării Datelor cu Caracter Personal (ANSPDCP ) în situația în care considerați că datele dumneavoastră nu au fost prelucrate în conformitate cu prevederile legale.
+<br>V. Exercitarea drepturilor
+<br>Pentru exercitarea drepturilor menționate mai sus, vă rugăm să vă adresați prin cerere scrisă, datată și semnată la adresa e-mail: pedi.floresti@yahoo.com.
+În termen de cel mult o lună calculat de la primirea cererii dumneavoastră vi se vor furniza informații privind acțiunile întreprinse sau acolo unde este cazul privind motivele pentru care nu pot fi luate masurile solicitate.
+Pentru a da curs unei cereri de acces la date cu caracter personal vom lua toate masurile rezonabile pentru a verifica identitatea persoanei vizate.
+Conform Regulamentului GDPR, termenul de răspuns menționat mai sus poate fi prelungit cu cel mult două luni în situația în care este necesar, ținându-se cont de complexitatea și numărul cererilor, urmând să vă informam cu privire la acest aspect, dacă va fi cazul.
+<br>VI. Transmiterea datelor cu caracter personal către instituții publice, instanțe de judecata, precum și autorități competente să cerceteze săvârșirea faptelor penale
+<br>În cazuri speciale, atunci când se impune acest lucru prin lege, Operatorul poate să ofere instituțiilor competente informații cu privire la date cu caracter personal.
+<br>VII. Serviciul de analiza web GOOGLE ADWORDS/ANALYTICS
+<br>Pagina noastră de internet utilizează serviciul de analiza web „Google Adwords/Analytics“ al
+societății Google Inc., în scop statistic.
+<br>Aceasta pagina de internet utilizează Google Analitic, un serviciu de analiza al web-ului pus la dispoziție de Google, Inc. („Google”), care la rândul sau, utilizează cookies. Informația generată de cookie despre modul dumneavoastră de utilizare al site-ului va fi transmis și stocat pe serverele Google din SUA.
+În cazul în care anonimizarea adresei IP este activată, IP-ul dumneavoastră va fi scurtată în spațiul statelor membre al Uniunii Europene sau a altor terți membrii ai Spațiului Economic European. Doar în cazuri excepționale, adresa IP întreaga va fi transmisa către un server Google în SUA și scurtată acolo. Anonimizarea IP este activata pentru acest site. Google va folosi aceasta informație în numele operatorului acestui site pentru scopul evaluării utilizării dumneavoastră a site-ului, va genera rapoarte despre activitatea pe site pentru operatori de pagini web și le va furniza și alte servicii legate de activitatea site-ului și utilizare a internetului.
+Adresa IP pe care o transmite browser dumneavoastră nu va fi asociata cu alte date deținute de către Google. Puteți refuza utilizarea cookie-urilor, prin selectarea setărilor adecvate ale browser ului dumneavoastră, însă în aceasta situație s-ar putea sa nu mai puteți utiliza toate funcționalitățile site-ului.
+Puteți, de asemenea, opta pentru a nu mai utiliza Google Analytics pe viitor prin descărcarea și instalarea Google Analytics Opt-out Browser Addon pentru browserul dumneavoastră:
+https://tools.google.com/dlpage/gaoptout?hl=en .
+<br>Informații suplimentare sunt disponibile pe paginile: Google Analitic terms of service și Google Analytics .
+<br>VIII. Baza legală
+<br>– Regulamentul (UE) 2016/679 privind protecția persoanelor fizice în ceea ce privește prelucrarea
+datelor cu caracter personal și privind libera circulație a acestor date și de abrogare a Directivei
+95/46/CE (Regulamentul general privind protecția datelor) (accesibil la http://dataprotection.ro/?page=Regulamentul_nr_679_2016 ).
+<br>– Legea nr. 506/2004 privind prelucrarea datelor cu caracter personal și protecția vieții private în sectorul comunicațiilor electronice.
+<br>Managementul de la cel mai înalt nivel se angajează ca prezenta politică de confidențialitate să fie respectată de toți angajații, prin implementarea procedurilor interne specifice/ regulilor privind protecția datelor cu caracter personal, conform bazei legale privind prelucrarea acestora.
+        
+        </div>
+        <div class="col-md-2"></div>
+    </div>
 {% endblock %}
