--- a/templates/static_pages/homepage.html.twig
+++ b/templates/static_pages/homepage.html.twig
@@ -7,7 +7,7 @@
         <div class="col-md-3"></div>
         <div class="col-md-6">
             <div class="welcome">
-                <span>Bine ați venit</span><br><br>
+                <span>Bine ai venit!</span><br><br>
                 <a href="{{ path('app_consultation') }}"><button class="btn">Programează o consultanță on-line</button></a>
             </div>
         </div>
@@ -23,8 +23,8 @@
                 Dr. Burlacu Maria Monica<br>
                 Medic Specialist Pediatrie
             </div>
-            <img src="{{ asset('assets/images/gallery/doctor-5.jpg') }}">
-            <img src="{{ asset('assets/images/gallery/doctor-4.jpg') }}">
+            <img src="{{ asset('assets/images/doctor-1.jpg') }}">
+            <img src="{{ asset('assets/images/doctor-2.jpg') }}">
         </div>
         <div class="col-md-5 section-about">
             Numele meu este Burlacu Maria Monica, sunt absolventa a Facultății de Medicina și Farmacie "Iuliu Hatieganu" Cluj Napoca, 
@@ -269,47 +269,23 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-1.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-1.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-1.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-1.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-2.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-2.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-2.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-2.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-3.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-3.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-3.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-3.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-4.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-4.jpg') }}" width="100%">
-                </a>
-            </div>
-            <div class="col-md-2"></div>
-        </div>
-        <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-5.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-5.jpg') }}" width="100%">
-                </a>
-            </div>
-            <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-6.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-6.jpg') }}" width="100%">
-                </a>
-            </div>
-            <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-7.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-7.jpg') }}" width="100%">
-                </a>
-            </div>
-            <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-8.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-8.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-4.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-4.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2"></div>
@@ -317,23 +293,23 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/doctor-9.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/doctor-9.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-5.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-5.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/cabinet-1.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/cabinet-1.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-6.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-6.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/cabinet-2.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/cabinet-2.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-7.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-7.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/cabinet-3.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/cabinet-3.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-8.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-8.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2"></div>
@@ -341,21 +317,96 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/cabinet-4.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/cabinet-4.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-9.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-9.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/cabinet-5.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/cabinet-5.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-10.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-10.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
-                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/cabinet-6.jpg') }}">
-                    <img src="{{ asset('assets/images/gallery/cabinet-6.jpg') }}" width="100%">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-11.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-11.jpg') }}" width="100%">
                 </a>
             </div>
             <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-12.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-12.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-13.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-13.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-14.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-14.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-15.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-15.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-16.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-16.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-17.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-17.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-18.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-18.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-19.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-19.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-20.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-20.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-21.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-21.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-22.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-22.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-23.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-23.jpg') }}" width="100%">
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a href="#" data-toggle="modal" data-target="#imageModal" data-image="{{ asset('assets/images/gallery/image-24.jpg') }}">
+                    <img src="{{ asset('assets/images/gallery/image-24.jpg') }}" width="100%">
+                </a>
             </div>
             <div class="col-md-2"></div>
         </div>
@@ -400,7 +451,7 @@
             <div class="modal-dialog modal-md" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <img src="{{ asset('assets/images/gallery/doctor-1.jpg') }}" width="100%">
+                        <img src="{{ asset('assets/images/gallery/image-1.jpg') }}" width="100%">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
