--- a/templates/static_pages/homepage.html.twig
+++ b/templates/static_pages/homepage.html.twig
@@ -223,7 +223,11 @@
         <div class="prices">
             <table>
                 <tr>
-                    <td class="table-header">Consultație</td>
+                    <td class="table-header">Consultanță on-line</td>
+                    <td class="table-header" colspan="2">100 RON</td>
+                </tr>
+                <tr>
+                    <td class="table-header">Consultație la cabinet</td>
                     <td class="table-header">În zilele de Luni-Vineri</td>
                     <td class="table-header">Sâmbăta, Duminica și sărbători legale</td>
                 </tr>
@@ -253,10 +257,6 @@
                 <tr>
                     <td>Ecografie abdominală</td>
                     <td colspan="2">150 RON</td>
-                </tr>
-                <tr>
-                    <td>Consultanță on-line</td>
-                    <td colspan="2">100 RON</td>
                 </tr>
             </table>
         </div>
