--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -10,15 +10,22 @@
 }
 
 .footer-title {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
     border-bottom: black 1px solid;
     padding: 10px;
 }
 
-.footer-content {
-    font-size: 12px;
+.footer-company {
+    font-size: 16px;
+    font-weight: bold;
     padding: 10px;
+}
+
+.footer-content {
+    font-size: 14px;
+    padding: 10px;
+    line-height: 2;
 }
 
 .footer-content a {
