Updated some texts.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Medic Specialist Pediatrie, Doctor Burlacu Maria Monica, Cabinet de pediatrie Floresti">
-        <meta name="og:title" property="og:title" content="Medic Specialist Pediatrie, Doctor Burlacu Maria Monica, Cabinet de pediatrie Floresti">
+        <meta name="description" content="Programează o consultație on-line">
+        <meta name="og:title" property="og:title" content="Dr Burlacu Maria Monica, medic specialist pediatru">
         <link rel="shortcut icon" href="{{ asset('assets/images/logo.png') }}" />
 
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -37,7 +37,7 @@
                     <div class="footer-company">
                         PAEDIATRICS BEST PRACTICE SRL<br>
                         J12/1806/2017; CUI 37437978<br>
-                        Sediu: Florești, str. Porii, nr. 154, ap. 22<br>
+                        Sediu: Florești<br>
                         Cont bancar: RO54BTRLRONCRT0391503101
                     </div>
                 </div>
