--- a/templates/static_pages/homepage.html.twig
+++ b/templates/static_pages/homepage.html.twig
@@ -8,7 +8,7 @@
         <div class="col-md-6">
             <div class="welcome">
                 <span>Bine ai venit!</span><br><br>
-                <a href="{{ path('app_consultation') }}"><button class="btn">Programează o consultanță on-line</button></a>
+                <a href="{{ path('app_consultation') }}"><button class="btn">Programează o consultanță on-line de pediatrie</button></a>
             </div>
         </div>
         <div class="col-md-3"></div>
